chore: cleanup, fix imports, and types from recent changes